# nav-evals-public

./: .gitignore  .lintstagedrc.js  .prettierrc.cjs  README.md  package-lock.json  package.json  tsconfig.json
data/eval-outputs/: eval-results.json
data/test-sets/: ca.jsonl  sf.jsonl
python-analysis/: analysis_summary.md  navigation_eval_analysis.ipynb  navigation_eval_analysis.py  pyproject.toml  test_setup.py
src/: eval-llm-test-set-outputs.ts  remove-day-from-filenames.ts  remove-specific-ids.ts  run-all-combinations.ts  run-llm-on-test-set.test.ts  run-llm-on-test-set.ts
src/helpers/: eval.test.ts  eval.ts
